tests/paczka1/fuzzy1/84161838.err
Error in line 8: tXDhvWt4CFY A349 83,9
Error in line 6: 6D2elemMHg S480 71,2
Error in line 11: zBzYvrIU7 S480 93,9
Error in line 14: y4XatBvsL4W S619 86,9
Error in line 30: A349 S619 50,1
Error in line 29: jdF383 S619 2,0
Error in line 35: 6D2elemMHg A349 35,8
Error in line 33: jdF383 S480 36,7
Error in line 38: zBzYvrIU7 S480 43,0
